--- a/custom.css
+++ b/custom.css
@@ -5,7 +5,7 @@ html body {
  
     background: linear-gradient(rgba(0,0,0,.85), rgba(0,0,0,.85)), url(/banner-low.jpg) ;
     background-repeat: repeat-x, no-repeat;
-    background-size: 400px 100px;
+    background-size: contain;
     position: relative;
 }
 
