--- a/custom.css
+++ b/custom.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@600..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600..700&display=swap');
 
 
 /* Add a black background color to the top navigation */
@@ -9,11 +10,12 @@
   
   /* Style the links inside the navigation bar */
   .topnav a {
-    float: left;
+    float: right;
     color: #f2f2f2;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    font-family: "Montserrat";
     font-size: 17px;
   }
   
@@ -28,7 +30,7 @@
     background-color: #04AA6D;
     color: white;
   }
-  
+
 html body {
  
     background: linear-gradient(rgba(0,0,0,.85), rgba(0,0,0,.85)), url(/banner-low.jpg) ;
