--- a/custom.css
+++ b/custom.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@600..700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400..700&display=swap');
 
 
 /* Add a black background color to the top navigation */
 .topnav {
-    background-color: #333;
+    background-color: rgba(51, 51, 51, 0.014);
     overflow: hidden;
   }
   
@@ -21,14 +21,14 @@
   
   /* Change the color of links on hover */
   .topnav a:hover {
-    background-color: #ddd;
-    color: black;
+    background-color: rgba(221, 221, 221, 0);
+    color: #d0e23f;
   }
   
   /* Add a color to the active/current link */
   .topnav a.active {
-    background-color: #04AA6D;
-    color: white;
+    background-color: #04aa6d00;
+    color: #e1e7b4;
   }
 
 html body {
