--- a/custom.css
+++ b/custom.css
@@ -31,6 +31,12 @@
     color: #e1e7b4;
   }
 
+
+  #pxlogo{ 
+	position:fixed; 
+	top:0; 
+	left:0; 
+} 
 html body {
  
     background: linear-gradient(rgba(0,0,0,.85), rgba(0,0,0,.85)), url(/banner-low.jpg) ;
