--- a/custom.css
+++ b/custom.css
@@ -17,6 +17,7 @@
     text-decoration: none;
     font-family: "Montserrat";
     font-size: 17px;
+    margin-right: 50px;
   }
   
   /* Change the color of links on hover */
@@ -36,6 +37,8 @@
 	position:fixed; 
 	top:0; 
 	left:0; 
+    
+    height: 100px;
 } 
 html body {
  
