--- a/custom.css
+++ b/custom.css
@@ -35,11 +35,10 @@
   #pxlogo{ 
 	position:fixed; 
 	top:0; 
-	left:0; 
-    
+	left:0;   
     opacity: 1;
-    transform: scale(0.5, 0.5) 
-    opacity 1.6s ease-out 0s, transform 7.2s linear 0s;
+    transform: scale(0.5, 0.5) ;
+    transition: opacity 1.6s ease-out 0s, transform 7.2s linear 0s;
     transform-origin: center center;
     animation: normal;
 } 
