--- a/custom.css
+++ b/custom.css
@@ -33,14 +33,12 @@
 
 
   #pxlogo{ 
-	position:fixed; 
-	top:0; 
-	left:0;   
-    opacity: 1;
-    transform: scale(0.5, 0.5) ;
-    transition: opacity 1.6s ease-out 0s, transform 7.2s linear 0s;
-    transform-origin: center center;
-    animation: normal;
+    float: left;
+    width: 100px;
+    height: 50px;
+    border-radius: 50%;
+    box-sizing: border-box;
+    padding: 5px;
 } 
 html body {
  
