--- a/custom.css
+++ b/custom.css
@@ -37,8 +37,9 @@
 	top:0; 
 	left:0;   
     opacity: 1;
-    transform: scale(0.5, 0.5) ;
+    transform: scale(0.4, 0.4) ;
     transform-origin: left top;
+    padding: 5px;
 } 
 html body {
  
@@ -76,7 +77,7 @@ a:active {
 
 .mint-top {
     text-align:center;
-    margin-top: 90px;
+    margin-top: 150px;
    
 }
 
