--- a/custom.css
+++ b/custom.css
@@ -33,13 +33,14 @@
 
 
   #pxlogo{ 
-	position:fixed; 
-	top:10; 
-	left:15;   
+	
+	top:0; 
+	left:0;   
     opacity: 1;
+    padding: 15;
     transform: scale(0.4, 0.4) ;
     transform-origin: left top;
-    padding: 5px;
+   
 } 
 html body {
  
