--- a/custom.css
+++ b/custom.css
@@ -39,7 +39,7 @@
     opacity: 1;
     padding: 32;
     transform: scale(0.4, 0.4) ;
-    transform-origin: left top;
+    /*transform-origin: left top;*/
    
 } 
 html body {
