--- a/custom.css
+++ b/custom.css
@@ -38,8 +38,8 @@
 	left:32;   
     opacity: 1;
     padding: 32;
-    transform: scale(0.4, 0.4) ;
-    /*transform-origin: left top;*/
+    /*transform: scale(0.4, 0.4) ;
+    transform-origin: left top;*/
    
 } 
 html body {
