--- a/custom.css
+++ b/custom.css
@@ -12,8 +12,8 @@
   .topnav a {
     float: right;
     color: #f2f2f2;
-    text-align: left;
-    padding: 14px 16px;
+    text-align: center;
+    padding: 15px 15px 15px 15px;
     text-decoration: none;
     font-family: "Montserrat";
     font-size: 17px;
@@ -33,11 +33,12 @@
 
 
   #pxlogo{ 
-	
-    padding-left: 10%;
-	
-  
-   
+	position:absolute; 
+	top:5; 
+	left:5;   
+    opacity: 1;
+    transform: scale(0.3, 0.3) ;
+    transform-origin: left top;
 } 
 html body {
  
@@ -48,7 +49,6 @@ html body {
 }
 
 .wrapper {
-    padding-left: 100px;
     position: relative;
     overflow: hidden;
     min-height: 100vh;
