--- a/custom.css
+++ b/custom.css
@@ -42,7 +42,7 @@
 } 
 html body {
  
-    background: linear-gradient(rgba(0,0,0,.85), rgba(0,0,0,.85)), url(/banner-low.jpg) ;
+    background: linear-gradient(rgba(0,0,0,.85), rgba(0,0,0,.85)), url(/TeddyTrexCandyMachine/banner-low.jpg) ;
     background-repeat: repeat-x, no-repeat;
     background-size: cover;
     position: relative;
