--- a/custom.css
+++ b/custom.css
@@ -31,18 +31,33 @@
     color: #e1e7b4;
   }
 
+/*DROP DOWN*/
 
-  .dropbtn {
-    background-color: #4CAF50;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
   }
   
-  .dropdown {
-    position: relative;
+  li {
+    float: left;
+  }
+  
+  li a, .dropbtn {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  li a:hover, .dropdown:hover .dropbtn {
+    background-color: red;
+  }
+  
+  li.dropdown {
     display: inline-block;
   }
   
@@ -60,25 +75,22 @@
     padding: 12px 16px;
     text-decoration: none;
     display: block;
+    text-align: left;
   }
   
-  .dropdown-content a:hover {background-color: #f1f1f1}
+  .dropdown-content a:hover {background-color: #f1f1f1;}
   
   .dropdown:hover .dropdown-content {
     display: block;
-  }
-  
-  .dropdown:hover .dropbtn {
-    background-color: #3e8e41;
   }
 
   #pxlogo{ 
 	position:absolute; 
 	top:15px; 
 	left:15px;   
+   }
    
-  
-} 
+   
 html body {
  
     background: linear-gradient(rgba(0,0,0,.85), rgba(0,0,0,.85)), url(/TeddyTrexCandyMachine/banner-low.jpg) ;
