--- a/custom.css
+++ b/custom.css
@@ -2,34 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400..700&display=swap');
 
 
-/* Add a black background color to the top navigation */
-.topnav {
-    background-color: rgba(51, 51, 51, 0.014);
-    overflow: hidden;
-  }
-  
-  /* Style the links inside the navigation bar */
-  .topnav a {
-    float: right;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 15px 15px 15px 15px;
-    text-decoration: none;
-    font-family: "Montserrat";
-    font-size: 17px;
-  }
-  
-  /* Change the color of links on hover */
-  .topnav a:hover {
-    background-color: rgba(221, 221, 221, 0);
-    color: #d0e23f;
-  }
-  
-  /* Add a color to the active/current link */
-  .topnav a.active {
-    background-color: #04aa6d00;
-    color: #e1e7b4;
-  }
+
 
 /*DROP DOWN*/
 
@@ -85,6 +58,7 @@ ul {
   }
 
   #pxlogo{ 
+    float: Right;
 	position:absolute; 
 	top:15px; 
 	left:15px;   
