--- a/custom.css
+++ b/custom.css
@@ -15,7 +15,7 @@ ul {
   }
   
   li {
-    float: left;
+    float: right;
   }
   
   li a, .dropbtn {
@@ -62,6 +62,7 @@ ul {
 	position:absolute; 
 	top:15px; 
 	left:15px;   
+    width:  50%;
    }
    
    
