--- a/custom.css
+++ b/custom.css
@@ -11,7 +11,7 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: rgba(51, 51, 51, 0);
   }
   
   li {
@@ -22,12 +22,13 @@ ul {
     display: inline-block;
     color: white;
     text-align: center;
+    font-family: "Montserrat";
     padding: 14px 16px;
     text-decoration: none;
   }
   
   li a:hover, .dropdown:hover .dropbtn {
-    background-color: red;
+    background-color: rgba(255, 0, 0, 0);
   }
   
   li.dropdown {
@@ -37,7 +38,8 @@ ul {
   .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
+    background-color: #424242;
+    
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
@@ -57,12 +59,12 @@ ul {
     display: block;
   }
 
-  #pxlogo{ 
-    float: Right;
+  .pxlogo{ 
 	position:absolute; 
 	top:15px; 
 	left:15px;   
     width:  50%;
+    height: 50%;
    }
    
    
