--- a/custom.css
+++ b/custom.css
@@ -20,7 +20,7 @@ ul {
   
   li a, .dropbtn {
     display: inline-block;
-    color: white;
+    color: rgb(0, 223, 148);
     text-align: center;
     font-family: "Montserrat";
     padding: 14px 16px;
@@ -28,7 +28,7 @@ ul {
   }
   
   li a:hover, .dropdown:hover .dropbtn {
-    background-color: rgba(255, 0, 0, 0);
+    background-color: rgba(255, 0, 0, 0.932);
   }
   
   li.dropdown {
@@ -38,15 +38,15 @@ ul {
   .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #424242;
+    background-color: #000000;
     
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px rgba(212, 0, 255, 0);
     z-index: 1;
   }
   
   .dropdown-content a {
-    color: black;
+    color: rgb(68, 0, 255);
     padding: 12px 16px;
     text-decoration: none;
     display: block;
