--- a/custom.css
+++ b/custom.css
@@ -20,15 +20,15 @@ ul {
   
   li a, .dropbtn {
     display: inline-block;
-    color: rgb(0, 223, 148);
+    color: rgb(255, 255, 255); /*Normal Text Color*/
     text-align: center;
     font-family: "Montserrat";
     padding: 14px 16px;
-    text-decoration: none;
   }
   
   li a:hover, .dropdown:hover .dropbtn {
-    background-color: rgba(255, 0, 0, 0.932);
+    background-color: rgba(255, 0, 0, 0); /*Box Over Title Selected*/
+    color: #d0e23f; /*Normal Text Color*/
   }
   
   li.dropdown {
@@ -38,7 +38,7 @@ ul {
   .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #000000;
+    background-color: #000000; /*Dropdown BG color*/
     
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(212, 0, 255, 0);
@@ -46,27 +46,26 @@ ul {
   }
   
   .dropdown-content a {
-    color: rgb(68, 0, 255);
+    color: rgb(255, 255, 255); /*Drop down text Color*/
     padding: 12px 16px;
     text-decoration: none;
     display: block;
     text-align: left;
   }
   
-  .dropdown-content a:hover {background-color: #f1f1f1;}
+  .dropdown-content a:hover {background-color: #d0e23f;} /*Dropdown Selection Color*/
   
   .dropdown:hover .dropdown-content {
     display: block;
   }
 
-  .pxlogo{ 
+.pxlogo { 
 	position:absolute; 
 	top:15px; 
 	left:15px;   
-    transform: scale(.5, .5);
-    width: 50%;
-    height: 50%;
-   }
+    max-width: 50%;
+    max-height: 50%;
+ }
    
    
 html body {
