--- a/custom.css
+++ b/custom.css
@@ -106,12 +106,19 @@ a:active {
 .logo {
     width:350px;
 }
-.pxlogo { 
-    position:absolute; 
-    top:0; 
-    left:0;
-	width:350px;
-    transform: scale(0.5, 0.5);
+#pxlogo { 
+    float: left;
+    width: 100px;
+    height: 50px;
+    border-radius: 50%;
+    box-sizing: border-box;
+    padding: 5px;
+	position:absolute; 
+	top:0; 
+	left:0;   
+    opacity: 1;
+    transform: scale(0.5, 0.5) ;
+    transform-origin: left top;
  }
    
 
