--- a/custom.css
+++ b/custom.css
@@ -107,13 +107,8 @@ a:active {
     width:350px;
 }
 #pxlogo { 
-    float: left;
-    width: 100px;
-    height: 50px;
-    border-radius: 50%;
-    box-sizing: border-box;
-    padding: 5px;
-	position:absolute; 
+
+	position:fixed; 
 	top:0; 
 	left:0;   
     opacity: 1;
