--- a/custom.css
+++ b/custom.css
@@ -9,9 +9,9 @@
 ul {
     list-style-type: none;
     margin: 15;
-    padding: 0;
+    padding:15;
     overflow: hidden;
-    background-color: rgba(51, 51, 51, 0);
+    background-color: rgba(51, 51, 51, 00);
   }
   
   li {
@@ -114,6 +114,8 @@ a:active {
     opacity: 1;
     transform: scale(0.4, 0.4) ;
     transform-origin: left top;
+	margin: 15;
+    padding:15;
  }
    
 
