--- a/TTREX.css
+++ b/TTREX.css
@@ -61,26 +61,12 @@ ul {
 
 
    
-html body 
-{
+html body {
  
-    background-image: linear-gradient(to bottom right, Black, #d0e23f);
-}
-
-.floating { 
-    animation-name: floating;
-    animation-duration: 3s;
-    animation-iteration-count: infinite;
-    animation-timing-function: ease-in-out;
-    margin-left: 100px;
-    margin-top: 100px;
-	 
-}
- 
-@keyframes floating {
-    0% { transform: translate(0,  0px); }
-    50%  { transform: translate(0, 15px); }
-    100%   { transform: translate(0, -0px); }   
+    background: linear-gradient(rgba(0,0,0,.85), rgba(0,0,0,.85)), url(/banner-low.jpg) ;
+    background-repeat: repeat-x, no-repeat;
+    background-size: cover;
+    position: relative;
 }
 
 .wrapper {
@@ -89,8 +75,8 @@ html body
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;   
-
+    justify-content: flex-start;
+    background-color: none;
 }
 
 a {
