--- a/custom.css
+++ b/custom.css
@@ -64,7 +64,8 @@ ul {
 html body 
 {
     background-image: linear-gradient(to bottom right, Black, #d0e23f);
-    background-repeat: no-repeat;
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 
 .floating { 
