--- a/TTREX.css
+++ b/TTREX.css
@@ -5,6 +5,23 @@
 
 
 /*DROP DOWN*/
+#pxnav
+{
+	display: flex;
+	position:fixed; 
+	width: 100vw;
+    max-width: 100vw;
+	z-index: 2;
+	
+	top:0; 
+	left:0;   
+    opacity: 1;
+    transform: scale(0.4, 0.4) ;
+    transform-origin: left top;
+	margin: 20;
+    padding:20;
+	z-index: 2;
+ }
 
 ul {
     list-style-type: none;
@@ -106,57 +123,86 @@ a:active {
 .logo {
     width:350px;
 }
-#pxlogo { 
-
+#pxnav
+{
+	display: flex;
 	position:fixed; 
+	width: 100vw;
+    max-width: 100vw;
+	z-index: 2;
+	
 	top:0; 
 	left:0;   
     opacity: 1;
     transform: scale(0.4, 0.4) ;
     transform-origin: left top;
-	margin: 15;
-    padding:15;
+	margin: 20;
+    padding:20;
+	z-index: 2;
  }
    
-
-h1{
-    color:white;
-    font-family: "Oswald", Sans-serif;
-    font-size: 55px;
-    font-weight: 700;
-    text-transform: uppercase;
-}
-
-h2{
-    font-family: "Oswald", Sans-serif;
-    font-weight: 600;
-    color:white;
-    text-transform: uppercase;
-}
-
-h3 {
-    font-family: "Oswald", Sans-serif;
-    font-weight: 600;
-    color:white;
-    text-transform: uppercase;
-}
-
-
-.mint-img {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 5px;
-}
-
-.mint-img img {
-    width:400px;
-    border-radius:20px;
-    margin:5px;
-
-
-}
-
+ul {
+	list-style-type: none;
+	margin-top: 5px;
+	margin-right: 5px;
+	margin-left: 5px;
+	margin-bottom: 5px;
+	padding: 15;
+	overflow: hidden;
+	background-color: rgba(51, 51, 51, 00);
+	font-size: 45px;
+	z-index: 2;
+  }
+  
+  li {
+    float: right;
+  }
+  
+  li a, .dropbtn {
+	display: inline-block;
+	color: rgb(221, 221, 221);
+	font-family: "Montserrat";
+	font-size: 45px;
+	padding-right: 16px;
+	padding-left: 16px;
+  }
+  
+  li a:hover, .dropdown:hover .dropbtn {
+	color: #ffffff; /*Normal Text Color*/
+	font-size: 45px;
+  }
+  
+  li.dropdown {
+	display: inline-block;
+	font-size: 45px;
+  }
+  
+  .dropdown-content {
+	display: none;
+	position: absolute;
+	background-color: #000000; /*Dropdown BG color*/
+	min-width: 160px;
+	font-size: 45px;
+	z-index: 2;
+	-webkit-box-sizing: inherit;
+	-moz-box-sizing: inherit;
+	box-sizing: inherit;
+  }
+  
+  .dropdown-content a {
+    color: rgb(255, 255, 255); /*Drop down text Color*/
+    padding: 10px 10px;
+    text-decoration: none;
+    display: block;
+	   font-size: 45px;
+    text-align: left;
+  }
+  
+  .dropdown-content a:hover {background-color: #d0e23f;} /*Dropdown Selection Color*/
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
 .MuiContainer-root {
     margin-top:30px !important;
     
