--- a/custom.css
+++ b/custom.css
@@ -5,13 +5,35 @@
 
 
 /*DROP DOWN*/
+#pxnav
+{
+	display: flex;
+	position:fixed; 
+	width: 100vw;
+    max-width: 100vw;
+	z-index: 2;
+	
+	top:0; 
+	left:0;   
+    opacity: 1;
+    transform: scale(0.4, 0.4) ;
+    transform-origin: left top;
+	margin: 20;
+    padding:20;
+	z-index: 2;
+ }
 
 ul {
-    list-style-type: none;
-    margin: 15;
-    padding:15;
-    overflow: hidden;
-    background-color: rgba(51, 51, 51, 00);
+	list-style-type: none;
+	margin-top: 5px;
+	margin-right: 5px;
+	margin-left: 5px;
+	margin-bottom: 5px;
+	padding: 15;
+	overflow: hidden;
+	background-color: rgba(51, 51, 51, 00);
+	font-size: 45px;
+	z-index: 2;
   }
   
   li {
@@ -19,37 +41,42 @@ ul {
   }
   
   li a, .dropbtn {
-    display: inline-block;
-    color: rgb(221, 221, 221); /*Normal Text Color*/
-    text-align: center;
-    font-family: "Montserrat";
-    padding: 14px 16px;
+	display: inline-block;
+	color: rgb(221, 221, 221);
+	font-family: "Montserrat";
+	font-size: 45px;
+	padding-right: 16px;
+	padding-left: 16px;
   }
   
   li a:hover, .dropdown:hover .dropbtn {
-    background-color: rgba(255, 0, 0, 0); /*Box Over Title Selected*/
-    color: #ffffff; /*Normal Text Color*/
+	color: #ffffff; /*Normal Text Color*/
+	font-size: 45px;
   }
   
   li.dropdown {
-    display: inline-block;
+	display: inline-block;
+	font-size: 45px;
   }
   
   .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #000000; /*Dropdown BG color*/
-    
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.459);
-    z-index: 1;
+	display: none;
+	position: absolute;
+	background-color: #000000; /*Dropdown BG color*/
+	min-width: 160px;
+	font-size: 45px;
+	z-index: 2;
+	-webkit-box-sizing: inherit;
+	-moz-box-sizing: inherit;
+	box-sizing: inherit;
   }
   
   .dropdown-content a {
     color: rgb(255, 255, 255); /*Drop down text Color*/
-    padding: 12px 16px;
+    padding: 10px 10px;
     text-decoration: none;
     display: block;
+	   font-size: 45px;
     text-align: left;
   }
   
@@ -62,9 +89,6 @@ ul {
 
 .avatar
 {
-	
-
-
     vertical-align: bottom;
     left: 70%;
 }
@@ -127,6 +151,7 @@ a:active {
     display: flex;
     align-items: center;
     justify-content: center;
+	drop-shadow(10px 5px 4px rgba(0, 0, 0, 0.5));
   }
 
 .mint-top {
@@ -136,39 +161,35 @@ a:active {
 }
 
 .logo {
-    width:350px;
+	margin: 0;
+	width: 350px;
+	padding-bottom: 20px;
 }
-#pxlogo { 
 
-	position:fixed; 
-	top:0; 
-	left:0;   
-    opacity: 1;
-    transform: scale(0.4, 0.4) ;
-    transform-origin: left top;
-	margin: 15;
-    padding:15;
- }
+
    
 
 h1{
-    color:white;
-    font-family: "Oswald", Sans-serif;
-    font-size: 55px;
+    color:#d0e23f;
+	font-family: "Montserrat";
+    font-size: 75px;
     font-weight: 700;
     text-transform: uppercase;
+	filter: drop-shadow(10px 5px 4px rgba(0, 0, 0, 0.5));
 }
 
 h2{
     font-family: "Oswald", Sans-serif;
+	font-size: 35px;
     font-weight: 600;
-    color:white;
+    color:black;
     text-transform: uppercase;
 }
 
 h3 {
     font-family: "Oswald", Sans-serif;
     font-weight: 600;
+	font-size: 75px;
     color:white;
     text-transform: uppercase;
 }
@@ -179,13 +200,16 @@ h3 {
     align-items: center;
     justify-content: center;
     margin-bottom: 5px;
+	
+
+
 }
 
 .mint-img img {
-    width:400px;
-    border-radius:20px;
-    margin:5px;
-
+	width: 400px;
+	border-radius: 20px;
+	margin: 5px;
+	
 
 }
 
@@ -194,6 +218,28 @@ h3 {
     
 }
 
+.embed-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  
+  max-width: 100%;
+	z-index:1;
+}
+
+.embed-container iframe,
+.embed-container object,
+.embed-container embed {
+	position: absolute;
+	top: -320px;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 1;
+	filter: drop-shadow(20px 15px 8px rgba(0, 0, 0, 0.35));
+	margin-top: 0px;
+	padding-top: 0px;
+}
 
 footer {
    
@@ -204,7 +250,7 @@ footer {
     margin-left:auto;
     margin-right:auto;
     color:white;
-  
+  filter: drop-shadow(10px 5px 4px rgba(0, 0, 0, 0.35));
     
 }
 
@@ -272,4 +318,140 @@ footer a {
         max-width: 444px;
         padding:10px;
     }
+}
+
+* {
+  box-sizing: border-box;
+}
+
+/* Set a background color */
+body {
+  background-color: #474e5d;
+  font-family: Helvetica, sans-serif;
+}
+
+/* The actual timeline (the vertical ruler) */
+.timeline {
+  position: relative;
+  max-width: 1200px;
+  margin: 0 auto;
+	filter: drop-shadow(10px 5px 4px rgba(0, 0, 0, 0.25));
+}
+
+/* The actual timeline (the vertical ruler) */
+.timeline::after {
+  content: '';
+  position: absolute;
+  width: 6px;
+  background-color:#d0e23f;
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  margin-left: -3px;
+}
+
+/* Container around content */
+.container {
+  padding: 10px 40px;
+  position: relative;
+  background-color: inherit;
+  width: 50%;
+}
+
+/* The circles on the timeline */
+.container::after {
+  content: '';
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  right: -17px;
+  background-color: #d0e23f;
+  border: 4px solid #FF9F55;
+  top: 15px;
+  border-radius: 50%;
+  z-index: 1;
+}
+
+/* Place the container to the left */
+.left {
+  left: 0;
+}
+
+/* Place the container to the right */
+.right {
+  left: 50%;
+}
+
+/* Add arrows to the left container (pointing right) */
+.left::before {
+  content: " ";
+  height: 0;
+  position: absolute;
+  top: 22px;
+  width: 0;
+  z-index: 1;
+  right: 30px;
+  border: medium solid white;
+  border-width: 10px 0 10px 10px;
+  border-color: transparent transparent transparent #d0e23f;
+}
+
+/* Add arrows to the right container (pointing left) */
+.right::before {
+  content: " ";
+  height: 0;
+  position: absolute;
+  top: 22px;
+  width: 0;
+  z-index: 1;
+  left: 30px;
+  border: medium solid ;
+  border-width: 10px 10px 10px 0;
+  border-color: transparent #d0e23f transparent transparent;
+}
+
+/* Fix the circle for containers on the right side */
+.right::after {
+  left: -16px;
+}
+
+/* The actual content */
+.content {
+  padding: 20px 30px;
+  background-color: #d0e23f;
+  position: relative;
+  border-radius: 6px;
+}
+
+/* Media queries - Responsive timeline on screens less than 600px wide */
+@media screen and (max-width: 600px) {
+/* Place the timelime to the left */
+  .timeline::after {
+    left: 31px;
+  }
+
+/* Full-width containers */
+  .container {
+    width: 100%;
+    padding-left: 70px;
+    padding-right: 25px;
+  }
+
+/* Make sure that all arrows are pointing leftwards */
+  .container::before {
+    left: 60px;
+    border: medium solid #d0e23f;
+    border-width: 10px 10px 10px 0;
+    border-color: transparent #d0e23f transparent transparent;
+  }
+
+/* Make sure all circles are at the same spot */
+  .left::after, .right::after {
+    left: 15px;
+  }
+
+/* Make all right containers behave like the left ones */
+  .right {
+    left: 0%;
+  }
 }
