--- a/custom.css
+++ b/custom.css
@@ -2,122 +2,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400..700&display=swap');
 
 
-*{
-	box-sizing: border-box;
-	margin: 5px 5px;
-	padding: 0;
-overflow: none;
-}
-
-li,a,button
-{
-	top:10;
-	font-family: "Montserrat";
-	font-weight: 500;
-	font-size: 20px;
-    	color: white;
-	padding: 10px;	
-    	text-decoration: none;	
-overflow: none;
-z-index: 2;
-}
-.nav
-{
-	
-}
-.navlogo
-{
-  z-index: 2;
-	transform-origin: left;
-	left: 10;
-  top:10;	
-	transform: scale(.4,.4);
-	cursor: pointer;
-	overflow: none;
-}
-
-.nav_links
-{
-	margin: 0px 30px;
-	
-	list-style: none;
-	
-}
-.nav_links li
-{
-	display: inline-block;
-	padding: 90px,90px;
-	cursor: pointer;
-	
-}
-
-.nav_links li a
-{
-	transition: all 0.3s ease 0s;
-}
-
-.nav_links li a:hover
-{
-	color: #C5FB1E;
-}
-
-li.dropdown {
-	display: inline-block;
-	overflow: none;
-	
-  }
-  
-  .dropdown-content {
-	display: none;
-	position: absolute;
-	background-color: #000000; /*Dropdown BG color*/
-	min-width: 160px;
-	font-size: 25px;
-	z-index: 2;
-	margin: 10px 0px;
-	-webkit-box-sizing: inherit;
-	-moz-box-sizing: inherit;
-	box-sizing: inherit;
-  }
-  
-  .dropdown-content a {
-    color: rgb(255, 255, 255); /*Drop down text Color*/
-    padding: 5px 5px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-  }
-  
-  .dropdown-content a:hover {background-color: #d0e23f;} /*Dropdown Selection Color*/
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
 
 
-button
-{
-	padding: 9px,25px;
-	background-color: #d0e23f;
-	border: none;
-	border-radius: 50px;
-	cursor: pointer;
-	transition: all 0.3s ease 0s;
-	
-}
 
-header
-{
-	display:flex;
-	justify-content:flex-end;
-	align-items: center;
-	padding: 30px,10%;
-	filter: drop-shadow(5px 5px 2px rgba(0, 0, 0, 0.15));
-}
-.avatar
-{
-    vertical-align: bottom;
-    left: 70%;
-}
+
+
+
+
+
 
 html body 
 {
@@ -151,15 +43,17 @@ html {
     100%   { transform: translate(0, -0px); }   
 }
 
-.wrapper {
-    position: relative;
-    overflow: hidden;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;   
 
+.wrapper {
+  position: relative;
+  overflow: hidden;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  background-color: none;
 }
+
 
 
 
@@ -241,55 +135,33 @@ h3 {
     
 }
 
-.embed-container {
-  position: relative;
-  padding-bottom: 56.25%;
-  height: 0;
-  
-  max-width: 100%;
-	z-index:1;
-}
-
-.embed-container iframe,
-.embed-container object,
-.embed-container embed {
-	position: absolute;
-	top: -320px;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	z-index: 1;
-	filter: drop-shadow(20px 15px 8px rgba(0, 0, 0, 0.35));
-	margin-top: 0px;
-	padding-top: 0px;
-}
-
 footer {
    
-    padding: 20px;
-    margin-top: 150px;
-    margin-bottom: 20px;
-    width: 250px;
-    margin-left:auto;
-    margin-right:auto;
-    color:white;
+  padding: 20px;
+  margin-top: 100px;
+  margin-bottom: 20px;
+  width: 400px;
+  margin-left:auto;
+  margin-right:auto;
+  color:white;
   filter: drop-shadow(10px 5px 4px rgba(0, 0, 0, 0.35));
-    
+  
 }
 
 footer ul {
-    display: flex;
-    justify-content: space-between;
-    
-    list-style-type: none;
-    padding: 10px;
-    margin: 0;
-  }
+  display: flex;
+  justify-content: space-between;
+  
+  list-style-type: none;
+  padding: 10px;
+  margin: 0;
+}
 
 footer a {
-    text-transform: uppercase;
-    font-weight:700;
+  text-transform: uppercase;
+  font-weight:700;
 }
+
 
 .mint-info {
     max-width: 444px;
@@ -343,138 +215,6 @@ footer a {
     }
 }
 
-* {
-    box-sizing: border-box;
-}
 
-/* Set a background color */
-body {
-  background-color: #474e5d;
-  font-family: Helvetica, sans-serif;
-}
 
-/* The actual timeline (the vertical ruler) */
-.timeline {
-  position: relative;
-  max-width: 1200px;
-  margin: 0 auto;
-	filter: drop-shadow(10px 5px 4px rgba(0, 0, 0, 0.25));
-}
 
-/* The actual timeline (the vertical ruler) */
-.timeline::after {
-  content: '';
-  position: absolute;
-  width: 6px;
-  background-color:#d0e23f;
-  top: 0;
-  bottom: 0;
-  left: 50%;
-  margin-left: -3px;
-}
-
-/* Container around content */
-.container {
-  padding: 10px 40px;
-  position: relative;
-  background-color: inherit;
-  width: 50%;
-}
-
-/* The circles on the timeline */
-.container::after {
-  content: '';
-  position: absolute;
-  width: 25px;
-  height: 25px;
-  right: -17px;
-  background-color: #d0e23f;
-  border: 4px solid #FF9F55;
-  top: 15px;
-  border-radius: 50%;
-  z-index: 1;
-}
-
-/* Place the container to the left */
-.left {
-  left: 0;
-}
-
-/* Place the container to the right */
-.right {
-  left: 50%;
-}
-
-/* Add arrows to the left container (pointing right) */
-.left::before {
-  content: " ";
-  height: 0;
-  position: absolute;
-  top: 22px;
-  width: 0;
-  z-index: 1;
-  right: 30px;
-  border: medium solid white;
-  border-width: 10px 0 10px 10px;
-  border-color: transparent transparent transparent #d0e23f;
-}
-
-/* Add arrows to the right container (pointing left) */
-.right::before {
-  content: " ";
-  height: 0;
-  position: absolute;
-  top: 22px;
-  width: 0;
-  z-index: 1;
-  left: 30px;
-  border: medium solid ;
-  border-width: 10px 10px 10px 0;
-  border-color: transparent #d0e23f transparent transparent;
-}
-
-/* Fix the circle for containers on the right side */
-.right::after {
-  left: -16px;
-}
-
-/* The actual content */
-.content {
-  padding: 20px 30px;
-  background-color: #d0e23f;
-  position: relative;
-  border-radius: 6px;
-}
-
-/* Media queries - Responsive timeline on screens less than 600px wide */
-@media screen and (max-width: 600px) {
-/* Place the timelime to the left */
-  .timeline::after {
-    left: 31px;
-  }
-
-/* Full-width containers */
-  .container {
-    width: 100%;
-    padding-left: 70px;
-    padding-right: 25px;
-  }
-
-/* Make sure that all arrows are pointing leftwards */
-  .container::before {
-    left: 60px;
-    border: medium solid #d0e23f;
-    border-width: 10px 10px 10px 0;
-    border-color: transparent #d0e23f transparent transparent;
-  }
-
-/* Make sure all circles are at the same spot */
-  .left::after, .right::after {
-    left: 15px;
-  }
-
-/* Make all right containers behave like the left ones */
-  .right {
-    left: 0%;
-  }
-}
