--- a/custom.css
+++ b/custom.css
@@ -2,9 +2,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400..700&display=swap');
 
 
-
-
-
+*{
+  font-family: "Montserrat", Sans-serif;
+  font-weight: 600;
+  color:white;
+  text-transform: uppercase;
+}
 
 html body 
 {
@@ -16,12 +19,6 @@ html body
     margin: 0;
     
 }
-
-html {
-    height: 100%;
-}
-
-    
 
 
 .wrapper {
@@ -43,7 +40,6 @@ a:active {
 }
 
 
-
 .box {
     display: flex;
     align-items: center;
@@ -53,7 +49,7 @@ a:active {
 
 .mint-top {
     text-align:center;
-    margin-top: 150px;
+    margin-top: 100px;
    
 }
 
@@ -97,8 +93,6 @@ h3 {
   width:400px;
   border-radius:20px;
   margin:10px;
-
-
 }
 
 .MuiContainer-root {
@@ -116,7 +110,6 @@ footer {
   margin-right:auto;
   color:white;
   filter: drop-shadow(10px 5px 4px rgba(0, 0, 0, 0.35));
-  
 }
 
 footer ul {
