--- a/custom.css
+++ b/custom.css
@@ -89,6 +89,7 @@ h3 {
   width:400px;
   border-radius:20px;
   margin:10px;
+  filter: drop-shadow(10px 5px 4px rgba(0, 0, 0, 0.35));
 }
 
 .MuiContainer-root {
