--- a/custom.css
+++ b/custom.css
@@ -40,7 +40,9 @@ a:active {
     display: flex;
     align-items: center;
     justify-content: center;
-	drop-shadow(10px 5px 4px rgba(0, 0, 0, 0.5));
+    border-radius:20px;
+    filter: drop-shadow(10px 5px 4px rgba(0, 0, 0, 0.35));
+    background: rgba(0, 0, 0, 0.4);
   }
 
 .mint-top {
@@ -133,7 +135,7 @@ footer a {
     margin-top: 80px;
     margin-bottom: 40px;
     color:white;
-    background: rgba(0, 0, 0, 0.4);
+  
     padding:20px;
     line-height: 1.5em;
     margin-left:auto;
@@ -142,6 +144,7 @@ footer a {
     font-size: 15px;
     border-radius:20px;
     filter: drop-shadow(10px 5px 4px rgba(0, 0, 0, 0.35));
+    background: rgba(0, 0, 0, 0.4);
 }
 
 .mint-warning {
