--- a/custom.css
+++ b/custom.css
@@ -40,9 +40,18 @@ a:active {
     display: flex;
     align-items: center;
     justify-content: center;
+    max-width: 1600px;
+    margin-top: 80px;
+    margin-bottom: 40px;
+    color:white;
+    padding:20px;
+    margin-left:auto;
+    margin-right:auto;
+   
+
     border-radius:20px;
     filter: drop-shadow(10px 5px 4px rgba(0, 0, 0, 0.35));
-    background: rgba(0, 0, 0, 0.4);
+    background: #151a1f;
   }
 
 .mint-top {
