--- a/custom.css
+++ b/custom.css
@@ -94,7 +94,8 @@ h3 {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 50px;
+  margin-bottom: 25px;
+  margin-top: 25px;
 }
 
 
