--- a/custom.css
+++ b/custom.css
@@ -56,7 +56,7 @@ a:active {
 
 .mint-top {
     text-align:center;
-    margin-top: 100px;
+    margin-top: 60px;
    
 }
 
@@ -167,7 +167,18 @@ footer a {
     color:white;
     font-size: 15px;
 }
-
+.bird {
+  background-image: url('bird.svg');
+  background-size: auto 100%;
+  width: 88px;
+  height: 125px;
+  will-change: background-position;
+}
+@keyframes fly-cycle {
+  100% {
+  background-position: -900px 0;
+  } 
+}
 
 @media screen and (max-width:670px) {
  
