--- a/custom.css
+++ b/custom.css
@@ -64,6 +64,7 @@ a:active {
 	margin: 0;
 	width: 600px;
 	padding-bottom: 20px;
+  animation: gelatine 0.5s infinite;
 }
 
 h1{
@@ -113,13 +114,24 @@ h3 {
   
 }
 
+.gelatine {
+  animation: gelatine 0.5s infinite;
+}
+@keyframes gelatine {
+  from, to { transform: scale(1, 1); }
+  25% { transform: scale(0.9, 1.1); }
+  50% { transform: scale(1.1, 0.9); }
+  75% { transform: scale(0.95, 1.05); }
+}
+
 .pxlogo
 {
-  width: 200px;
+  width: 180px;
 }
 
 footer {
-   
+  align-items: center;
+  justify-content: center;
   padding: 20px;
   margin-top: 100px;
   margin-bottom: 20px;
