--- a/custom.css
+++ b/custom.css
@@ -64,7 +64,7 @@ a:active {
 	margin: 0;
 	width: 600px;
 	padding-bottom: 20px;
-  animation: gelatine 1.5s infinite;
+  animation: bounce 2s ease infinite;
 }
 
 h1{
@@ -114,20 +114,31 @@ h3 {
   
 }
 
-.gelatine {
-  animation: gelatine 0.5s infinite;
+.bounce {
+  animation: bounce 2s ease infinite;
 }
-@keyframes gelatine {
-  from, to { transform: scale(1, 1); }
-  25% { transform: scale(0.9, 1.1); }
-  50% { transform: scale(1.1, 0.9); }
-  75% { transform: scale(0.95, 1.05); }
+@keyframes bounce {
+    70% { transform:translateY(0%); }
+    80% { transform:translateY(-15%); }
+    90% { transform:translateY(0%); }
+    95% { transform:translateY(-7%); }
+    97% { transform:translateY(0%); }
+    99% { transform:translateY(-3%); }
+    100% { transform:translateY(0); }
 }
 
+.bounce2 {
+  animation: bounce2 2s ease infinite;
+}
+@keyframes bounce2 {
+	0%, 20%, 50%, 80%, 100% {transform: translateY(0);}
+	40% {transform: translateY(-30px);}
+	60% {transform: translateY(-15px);}
+}
 .pxlogo
 {
   width: 180px;
-  margin-bottom: 30px;
+  margin-bottom: 60px;
 }
 
 footer {
