--- a/custom.css
+++ b/custom.css
@@ -40,7 +40,7 @@ a:active {
     display: flex;
     align-items: center;
     justify-content: center;
-    max-width: 1000px;
+    max-width: 950px;
     margin-top: 40px;
     margin-bottom: 40px;
     color:white;
@@ -146,7 +146,7 @@ footer {
   padding: 20px;
   margin-top: 100px;
   margin-bottom: 20px;
-  width: 450px;
+  width: 500px;
   margin-left:auto;
   margin-right:auto;
   color:white;
@@ -157,7 +157,7 @@ footer ul {
   display: flex;
   justify-content: space-between;
  
-  align-items:baseline;
+  align-items:end;
  
 
   list-style-type: none;
