--- a/custom.css
+++ b/custom.css
@@ -137,11 +137,14 @@ h3 {
 }
 .pxlogo
 {
-  width: 180px;
+  width: 220px;
 }
 
+.social
+{
+  width: 48px;
+}
 footer {
-  
 
   padding: 20px;
   margin-top: 100px;
