--- a/custom.css
+++ b/custom.css
@@ -158,6 +158,7 @@ footer {
 
 footer ul {
   display: flex;
+  align-items: center;
   justify-content: space-between;
   list-style-type: none;
   padding: 10px;
