--- a/custom.css
+++ b/custom.css
@@ -51,7 +51,7 @@ a:active {
 
     border-radius:20px;
     filter: drop-shadow(10px 5px 4px rgba(0, 0, 0, 0.35));
-    background: #151a1f;
+    background: #1f063f;
   }
 
 .mint-top {
